# psqlgen

./: Cargo.toml  Readme.md
src/: args.rs  error.rs  generator.rs  main.rs  parser.rs
