[package]
name = "psqlgen"
version = "0.1.2"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "PostgreSQL Query generation from migrations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/psqlgen"
documentation = "https://docs.rs/psqlgen/"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
sqlparser = "0.35.0"